--- a/index.html
+++ b/index.html
@@ -22,23 +22,21 @@
 <body>
   <!--container start-->
   <div class="container">
-    <!--header section start-->
-    <header>
-      
-    </header>
-    <!--header section start-->
     <!--main section start-->
     <main>
-
+      <section class="expanding-cards">
+        <div class="wrapper">
+          <ul class="list">
+            <li class="section one active"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
+            <li class="section two"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
+            <li class="section three"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
+            <li class="section four"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
+            <li class="section five"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!--main section end-->
-
-    <!--footer section start-->
-    <footer>      
-
-    </footer>
-    <!--footer section end-->
-
   </div>
   <!--container end-->
   <script src="assets/js/script.js"></script>
