expanding-cards section style & js  commit

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <section class="expanding-cards">
         <div class="wrapper">
           <ul class="list">
-            <li class="section active"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
-            <li class="section"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
-            <li class="section"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
-            <li class="section"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
-            <li class="section"><figure><img src="https://placehold.co/250x150/000000/FFF" alt="image"></figure></li>
+            <li class="section active"><img src="assets/images/aisvri-iyHY_njb6Jg-unsplash.jpg" alt="image"></li>
+            <li class="section"><img src="assets/images/aisvri-Wq1vVLE6xMs-unsplash.jpg" alt="image"></li>
+            <li class="section"><img src="assets/images/andrik-langfield-Jqa53u4Q2g4-unsplash.jpg" alt="image"></li>
+            <li class="section"><img src="assets/images/anton-maksimov-5642-su-ms5p6hmWXZM-unsplash.jpg" alt="image"></li>
+            <li class="section"><img src="assets/images/gustavo-quepon-pF_2lrjWiJE-unsplash.jpg" alt="image"></li>
           </ul>
         </div>
       </section>
